# AdventOfCode2024

./: .toolchain.toml  Cargo.toml  README.md
src/: lib.rs
src/lib/: aoc_api.rs  lib.rs
