[package]
name = "aoc2024"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/lib/lib.rs"

[dependencies]
paste = "1.0.15"
tokio = { version = "1.41.1", features = ["full"] }
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = "0.12.9"
itertools = "0.13.0"

[profile.bench]
lto = true
